--- a/index.html
+++ b/index.html
@@ -99,61 +99,61 @@
                <div class="skills_wrap">
                <ul class="skill_list">
                   <li>
-                        <div class="skill_bar">
-                           <div class="skill_title">
-                              <span>HTML5</span>
-                              <span>XX%</span>
-                           </div>
+                        <div class="skill_bar" style="--percentage: 80">
                         </div>
-                        <p>웹 접근성, 웹 표준에 맞는<br>
-                           홈페이지를 만들 수 있습니다.</p>
-                  </li>
-                  <li>
-                        <div class="skill_bar">
-                           <div class="skill_title">
-                              <span>CSS</span>
-                              <span>XX%</span>
-                           </div>
-                        </div>
-                        <p>웹 접근성, 웹 표준에 맞는<br>
-                           홈페이지를 만들 수 있습니다.</p>
-                  </li>
-                  <li>
-                        <div class="skill_bar">
-                           <div class="skill_title">
-                              <span>JAVA SCRIPT</span>
-                              <span>XX%</span>
-                           </div>
-                        </div>
-                        <p>웹 접근성, 웹 표준에 맞는<br>
-                           홈페이지를 만들 수 있습니다.</p>
-                  </li>
-                  <li>
-                     <div class="skill_bar">
                         <div class="skill_title">
-                              <span>JQUERY</span>
-                              <span>XX%</span>
-                           </div>
+                           <span>HTML5</span>
+                           <span>80%</span>
                         </div>
                         <p>웹 접근성, 웹 표준에 맞는<br>
                            홈페이지를 만들 수 있습니다.</p>
                   </li>
                   <li>
-                        <div class="skill_bar">
-                           <div class="skill_title">
-                              <span>REACT</span>
-                              <span>XX%</span>
-                           </div>
+                        <div class="skill_bar" style="--percentage: 80">
+                        </div>
+                        <div class="skill_title">
+                           <span>CSS</span>
+                           <span>80%</span>
                         </div>
                         <p>웹 접근성, 웹 표준에 맞는<br>
                            홈페이지를 만들 수 있습니다.</p>
                   </li>
                   <li>
-                        <div class="skill_bar">
-                           <div class="skill_title">
-                              <span>VUE</span>
-                              <span>XX%</span>
-                           </div>
+                        <div class="skill_bar" style="--percentage: 60">
+                        </div>
+                        <div class="skill_title">
+                           <span>JAVA SCRIPT</span>
+                           <span>60%</span>
+                        </div>
+                        <p>웹 접근성, 웹 표준에 맞는<br>
+                           홈페이지를 만들 수 있습니다.</p>
+                  </li>
+                  <li>
+                     <div class="skill_bar" style="--percentage: 70">
+                     </div>
+                     <div class="skill_title">
+                           <span>JQUERY</span>
+                           <span>70%</span>
+                        </div>
+                        <p>웹 접근성, 웹 표준에 맞는<br>
+                           홈페이지를 만들 수 있습니다.</p>
+                  </li>
+                  <li>
+                        <div class="skill_bar" style="--percentage: 40">
+                        </div>
+                        <div class="skill_title">
+                           <span>REACT</span>
+                           <span>40%</span>
+                        </div>
+                        <p>웹 접근성, 웹 표준에 맞는<br>
+                           홈페이지를 만들 수 있습니다.</p>
+                  </li>
+                  <li>
+                        <div class="skill_bar" style="--percentage: 00">
+                        </div>
+                        <div class="skill_title">
+                           <span>VUE</span>
+                           <span>00%</span>
                         </div>
                         <p>웹 접근성, 웹 표준에 맞는<br>
                            홈페이지를 만들 수 있습니다.</p>
