--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                         <div class="skill_bar" style="--percentage: 60">
                         </div>
                         <div class="skill_title">
-                           <span>JAVA SCRIPT</span>
+                           <span>JAVA<br>SCRIPT</span>
                            <span>60%</span>
                         </div>
                         <p>웹 접근성, 웹 표준에 맞는<br>
