--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    <title>[신다란] 웹퍼블리셔 포트폴리오</title>
    <!-- css -->
 <link rel="stylesheet" href="./css/reset.css">
-<link rel="stylesheet" href="./css/main.css">
+<link rel="stylesheet" href="./css/style.css">
 <link rel="stylesheet" href="./css/font.css">
 
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"/>
@@ -167,20 +167,20 @@
             <div class="inner">
                <h2>portfolio_</h2>
                <div class="portfolio_wrap">
-                  <h3>web coding_</h3>
-                  <div class="por_div">
-                     <ul class="port_list">
-                        <li><a href="#work_a"></a></li>
-                        <li><a href="#work_b"></a></li>
+                   <div class="por_div">
+                       <ul class="port_list">
+                        <li><h3>web coding_</h3></li>
+                        <li><a href="#work_a">프린트 매니아</a></li>
+                        <li><a href="#work_b">COEX</a></li>
                         <li><a href="#work_c"></a></li>
                      </ul>
                      <ul class="port_thumbnails">
                         <li id="work_a">
-                           <p></p>
-                           <span></span>
+                           <p>리뉴얼</p>
+                           <span>프린트 매니아</span>
                            <img src="" alt="">
                            <div class="contents">
-                              <strong></strong>
+                              <strong>html css js</strong>
                               <p></p>
                            </div>
                            <div class="contents">
@@ -191,7 +191,7 @@
                               <strong></strong>
                               <p></p>
                            </div>
-                           <a href="#" class="view_link"></a>
+                           <a href="#" class="view_link">view</a>
                         </li>
                         <li id="work_b">
                            <p></p>
@@ -202,14 +202,14 @@
                               <p></p>
                            </div>
                            <div class="contents">
-                              <strong></strong>
-                              <p></p>
+                              <strong>클롴 코딩</strong>
+                              <p>코엑스 COEX</p>
                            </div>
                            <div class="contents">
                               <strong></strong>
                               <p></p>
                            </div>
-                           <a href="#" class="view_link"></a>
+                           <a href="#" class="view_link">view</a>
                         </li>
                         <li id="work_c">
                            <p></p>
@@ -227,7 +227,7 @@
                               <strong></strong>
                               <p></p>
                            </div>
-                           <a href="#" class="view_link"></a>
+                           <a href="#" class="view_link">view</a>
                         </li>
                      </ul>
                   </div>
@@ -235,7 +235,7 @@
                   <h3>graphic design_</h3>
                   <div class="por_div">
                      <ul class="port_list">
-                        <li><a href="#work_aa"></a></li>
+                        <li><a href="#work_aa">로고 디자인</a></li>
                         <li><a href="#work_bb"></a></li>
                      </ul>
                      <ul class="port_thumbnails">
@@ -281,13 +281,13 @@
 
          <section class="contact">
             <div class="inner">
+                <h2>contact_</h2>
                <div class="contact_wrap">
-                  <h2>contact</h2>
-                  <span class="ending_msg"></span>
+                  <span class="ending_msg">THANKS FOR <br>WHATCHING</span>
                   <ul class="contact_info">
-                     <li></li>
-                     <li></li>
-                     <li></li>
+                     <li>e-mail moon.daran.s@gmail.com</li>
+                     <li>phone 010 - 8225 - 8465</li>
+                     <li>github https://github.com/Daran0628</li>
                   </ul>
                </div>
             </div>
