--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                         <div class="skill_bar" style="--percentage: 00">
                         </div>
                         <div class="skill_title">
-                           <span>VUE</span>
+                           <span>PS</span>
                            <span>00%</span>
                         </div>
                         <p>웹 접근성, 웹 표준에 맞는<br>
@@ -170,28 +170,28 @@
                   <h3>web coding_</h3>
                   <div class="por_div">
                      <ul class="port_list">
-                        <li><a href="#work_a"></a></li>
-                        <li><a href="#work_b"></a></li>
-                        <li><a href="#work_c"></a></li>
+                        <li><a href="#work_a">프린트 메니아_</a></li>
+                        <li><a href="#work_b">코엑스_</a></li>
+                        <li><a href="#work_c">TBA_</a></li>
                      </ul>
                      <ul class="port_thumbnails">
                         <li id="work_a">
-                           <p></p>
-                           <span></span>
+                           <p>리뉴얼 웹 페이지</p>
+                           <span>프린트 매니아</span>
                            <img src="" alt="">
                            <div class="contents">
-                              <strong></strong>
-                              <p></p>
+                              <strong>aaa</strong>
+                              <p>aaaaaaaaaaaaaaaaaaaaaaaaaaa</p>
                            </div>
                            <div class="contents">
-                              <strong></strong>
-                              <p></p>
+                              <strong>bbb</strong>
+                              <p>bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb</p>
                            </div>
                            <div class="contents">
-                              <strong></strong>
-                              <p></p>
+                              <strong>ccc</strong>
+                              <p>cccccccccccccccccccccccccccccccc</p>
                            </div>
-                           <a href="#" class="view_link"></a>
+                           <a href="#" class="view_link">VIEW</a>
                         </li>
                         <li id="work_b">
                            <p></p>
@@ -281,13 +281,13 @@
 
          <section class="contact">
             <div class="inner">
+               <h2>contact_</h2>
                <div class="contact_wrap">
-                  <h2>contact</h2>
-                  <span class="ending_msg"></span>
+                  <span class="ending_msg">THANK YOU <br>FOR YOURE TIME!</span>
                   <ul class="contact_info">
-                     <li></li>
-                     <li></li>
-                     <li></li>
+                     <li>010 8225 8465</li>
+                     <li>moon.daran.s@gmail.com</li>
+                     <!-- <li></li> -->
                   </ul>
                </div>
             </div>
