--- a/index.html
+++ b/index.html
@@ -182,7 +182,8 @@
                      <ul class="port_list">
                         <li><a href="#work_a">프린트 메니아<i class="ri-arrow-right-up-line"></i></a></li>
                         <li><a href="#work_b">코엑스<i class="ri-arrow-right-up-line"></i></a></li>
-                        <li><a href="#work_c">포트폴리오<i class="ri-arrow-right-up-line"></i></a></li>
+                        <li><a href="#work_c">카이스트<i class="ri-arrow-right-up-line"></i></a></li>
+                        <li><a href="#work_d">포트폴리오<i class="ri-arrow-right-up-line"></i></a></li>
                      </ul>
                      <ul class="port_thumbnails">
                         <li id="work_a">
@@ -226,6 +227,26 @@
                            </div>
                         </li>
                         <li id="work_c">
+                           <p>클론 코딩 : 반응형</p>
+                           <span>카이스트 대학원</span>
+                           <img src="./img/{ECDC5406-ED02-4E6E-BA33-8D5FD1BE0AE7}.png" alt="">
+                           <div class="contents_wrap">
+                              <div class="contents">
+                                 <strong>기술 스택 </strong>
+                                 <p>HTML,  CSS,  jQuery</p>
+                              </div>
+                              <div class="contents">
+                                 <strong>기여도</strong>
+                                 <p>퍼블리싱 % + 개발  %</p>
+                              </div>
+                              <a href="#" class="view_link">view</a>
+                           </div>
+                           <div class="contents">
+                              <strong>+</strong>
+                              <p> </p>
+                           </div>
+                        </li>
+                        <li id="work_d">
                            <p>웹 코딩</p>
                            <span>포트폴리오 페이지</span>
                            <img src="./img/{5CC5999A-0922-4A74-B931-E34B1F3F581A}.png" alt="">
@@ -248,8 +269,8 @@
                      </ul>
                   </div>
 
-                  <h3>graphic design_</h3>
-                  <div class="por_div">
+                  <h3 style="display:none">graphic design_</h3>
+                  <div style='display:none'class="por_div">
                      <ul class="port_list">
                         <li><a href="#work_aa">브랜드 로고<i class="ri-arrow-right-up-line"></i></a></li>
                         <li><a href="#work_bb">표지 디자인<i class="ri-arrow-right-up-line"></i></a></li>
