--- a/index.html
+++ b/index.html
@@ -196,14 +196,14 @@
                                  <p>HTML,  CSS,  Java Script,  jQuery </p>
                               </div>
                               <div class="contents">
-                                 <strong>기여도 </strong>
-                                 <p>퍼블리싱 % + 개발  %</p>
+                                 <strong>제작 기여도</strong>
+                                 <p>퍼블리싱 100% + 디자인 100%</p>
                               </div>
-                              <a href="#" class="view_link">view</a>
+                              <a href="https://daran0628.github.io/printMania/" class="view_link">view</a>
                            </div>
                            <div class="contents">
                               <strong>+</strong>
-                              <p>소규모 창작자들을 위한 인쇄 업체로 </p>
+                              <p>소규모 창작자들을 위한 인쇄 업체 </p>
                            </div>
                         </li>
                         <li id="work_b">
@@ -217,13 +217,13 @@
                               </div>
                               <div class="contents">
                                  <strong>기여도 </strong>
-                                 <p>퍼블리싱 % + 개발  %</p>
+                                 <p>퍼블리싱 100% + 디자인 0%</p>
                               </div>
-                              <a href="#" class="view_link">view</a>
+                              <a href="https://daran0628.github.io/coexClone/" class="view_link">view</a>
                            </div>
                            <div class="contents">
                               <strong>+</strong>
-                              <p> </p>
+                              <p>제작중</p>
                            </div>
                         </li>
                         <li id="work_c">
