--- a/index.html
+++ b/index.html
@@ -203,7 +203,8 @@
                            </div>
                            <div class="contents">
                               <strong>+</strong>
-                              <p>소규모 창작자들을 위한 인쇄 업체 </p>
+                              <p>제작중</p>
+                              <p>소규모 창작자들을 위한 인쇄 업체</p>
                            </div>
                         </li>
                         <li id="work_b">
@@ -237,7 +238,7 @@
                               </div>
                               <div class="contents">
                                  <strong>기여도</strong>
-                                 <p>퍼블리싱 % + 개발  %</p>
+                                 <p>퍼블리싱 % + 디자인 0%</p>
                               </div>
                               <a href="#" class="view_link">view</a>
                            </div>
@@ -257,13 +258,13 @@
                               </div>
                               <div class="contents">
                                  <strong>기여도 </strong>
-                                 <p>퍼블리싱 100% + 개발  %</p>
+                                 <p>퍼블리싱 100% + 디자인  100%</p>
                               </div>
                               <a href="#" class="view_link">view</a>
                            </div>
                            <div class="contents">
                               <strong>+</strong>
-                              <p>소규모 창작자들을 위한 인쇄 업체로 </p>
+                              <p></p>
                            </div>
                         </li>
                      </ul>
@@ -339,11 +340,9 @@ const $gnbMenu = document.querySelector(".gnb_menu");
 const $gnbClose = document.querySelector(".gnb_close");
 
 $gnb.onclick = function () {
-  console.log("gnb showing");
   $gnbMenu.style.display = "block";
 };
 $gnbClose.onclick = function () {
-  console.log("gnb closing");
   $gnbMenu.style.display = "none";
 };
 
